# aoc2024

./: .gitignore  Cargo.toml
src/: constants.rs  graph.rs  lib.rs  point.rs  runner.rs
src/2024/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  main.rs
src/grid/: mod.rs
src/parser/: and.rs  basic.rs  conditional.rs  delimiter.rs  extract.rs  map.rs  mod.rs  numbers.rs  or.rs  repeat.rs  rewind.rs  within.rs
src/search/: attributes.rs  mod.rs  seen.rs
src/search/order/: bfs.rs  dfs.rs  dijkstra.rs  mod.rs
src/utils/: crt.rs  direction.rs  gather.rs  mod.rs  union_find.rs
