[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

[lib]
name = "common"
path = "src/lib.rs"

[[bin]]
name = "2024"
path = "src/2024/main.rs"

[dependencies]
chrono = "0.4.38"
hashbrown = "0.14.5"
time = "0.3.36"
reqwest = { version = "0.12.5", features = ["blocking"] }
num = { version = "0.4.0" }
rustc-hash = "2.0.0"
smallvec = { version = "1.13.2", features = ["specialization"] }
md5 = "0.7.0"
rayon = "1.10.0"
arrayvec = "0.7.4"
bit-vec = "0.8.0"